Fixed setter injection and added TCK testsuite for verification.